icons aligns was fixed

--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -35,12 +35,17 @@
   &--cross {
     background-image: url(/images/cross.svg);
 
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
+
+    @include onTablet() {
+      width: 24px;
+      height: 24px;
+    }
 
     @include onDesktop() {
-      width: 22px;
-      height: 22px;
+      width: 24px;
+      height: 24px;
     }
   }
 }
