--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,20 +1,17 @@
 .page {
   scroll-behavior: smooth;
 
-  overflow-x: hidden;
-  margin-right: calc(-1 * (100vw - 100%));
-
   &__menu {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
 
-    transform: translateY(-100%);
+    transform: translateX(-100%);
     transition: transform 0.5s;
 
     &:target {
-      transform: translateY(0);
+      transform: translateX(0);
     }
   }
 
