--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -20,5 +20,15 @@
   &__menu {
     grid-template-columns: 1fr $icon-width;
     margin-bottom: 48px;
+
+    @include onTablet {
+      $icon-width: 24px;
+      grid-template-columns: 1fr $icon-width;
+    }
+
+    @include onDesktop {
+      $icon-width: 24px;
+      grid-template-columns: 1fr $icon-width;
+    }
   }
 }
